# MagicLight_Graph90E

./: CMakeLists.txt  Glacial.cbp  Glacial.layout  MagicLight.g3a  MagicLightDB.g3a  README.md  build
assets-cg/: fxconv-metadata.txt  icon-sel.pngZone.Identifier  icon-uns.pngZone.Identifier  maintitle.png.bak
build-cg/: CMakeCache.txt  Makefile  cmake_install.cmake  myaddin
src/: colors.h  main.cpp  main.cpp.bak  main.cpp.save-failed  primitives.cpp  primitives.cpp.bak  primitives.h  structs.h
